[package]
name = "matse_calendar"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = { version = "0.49.3", features = ["async" ]}
chrono = { version = "0.4.37", default-features = false, features = ["alloc","serde"] }
chrono-tz = "0.9.0"
ics = "0.5.8"
lazy_static = "1.4.0"
reqwest = { version = "0.12.3", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
time = "0.3.35"
tokio = { version = "1.37.0", features = [] }
