[package]
name = "matse_calendar"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = { version = "0.53.0", features = ["async"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "serde",
] }
chrono-tz = "0.9.0"
ics = "0.5.8"
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
time = "0.3.36"
tokio = { version = "1.37.0", features = [] }

[patch.crates-io]
is-terminal = { git = "https://github.com/morbatex/is-terminal.git", branch = "update-hermit-abi" }
